--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <section>
             <div class="headLine">
-                <img width="249" height="86" src="https://img.joongang.co.kr/pubimg/index/logo_thejoongang.png"
-                    alt="중앙일보" />
+                <img width="249" height="110" src="./img/homepageTitle.png"
+                    alt="K일보" />
             </div>
             <div class="menus">
                 <button id="business">비즈니스</button>
@@ -41,8 +41,12 @@
                         jsname="kn3ccd" aria-hidden="false">
                 </div>
                 <div class="col-lg-8">
-                    <h2>123</h2>
-                    <p>코딩임</p>
+                    <h2>'히어로는 아닙니다만' 장기용·천우희, 초능력 가족과 찜질방 사기단··· "흥미진진할 것"</h2>
+                    <p>이제껏 본 적 없는 독특한 세계관과 캐릭터, 판타지와 리얼리티를 절묘하게 넘나들며 유쾌한 웃음 속 공감을 선사한 조현탁 감독의 연출은 이번에도 통했다. 여기에 정재형 음악
+                        감독의 다채로운 음악은 ‘히어로는 아닙니다만’의 차별화된 분위기를 극대화해 몰입도를 높였다.
+
+                        무엇보다도 현대인의 질병에 걸려 능력을 상실한 초능력 가족의 구원자인 줄 알았던 도다해(천우희 분)의 반전, 그리고 복귀주(장기용 분)가 타임슬립 능력을 되찾고 돌아간
+                        과거에서 도다해의 손을 붙잡는 기적 같은 변화는 이들 관계에 숨겨진 비밀과 함께 쌍방 구원 로맨스에 대한 기대감을 한껏 끌어올렸다.</p>
                     <div>
                         kbs * 2021-11-11
                     </div>
@@ -51,9 +55,9 @@
         </section>
     </section>
 
-    <nav aria-label="Page navigation example">
+    <nav aria-label="Page navigation example" class="paginationForm">
         <ul class="pagination">
-           
+
         </ul>
     </nav>
 
