--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 
 <body>
     <section class="container">
-        <div>
+        <div id="inputArea">
             <input id="searchInput">
-            <button onclick="getNewsByKeyword()">검색</button>
+            <button id="searchButton" onclick="getNewsByKeyword()">검색</button>
         </div>
         <section>
             <div class="headLine">
-                <img width="249" height="110" src="./img/homepageTitle.png"
-                    alt="K일보" />
+                <img width="249" height="110" src="./img/homepageTitle.png" alt="K일보" />
             </div>
             <div class="menus">
                 <button id="business">비즈니스</button>
