--- a/index.html
+++ b/index.html
@@ -11,15 +11,34 @@
 </head>
 
 <body>
+    <div>
+
+    </div>
     <section class="container">
         <div id="inputArea">
             <input id="searchInput">
             <button id="searchButton" onclick="getNewsByKeyword()">검색</button>
         </div>
-        <section>
-            <div class="headLine">
-                <img width="249" height="110" src="./img/homepageTitle.png" alt="K일보" />
+        <div class="headLine">
+            <img width="249" height="110" src="./img/homepageTitle.png" title="K일보" />
+        </div>
+        </div>
+        <div class="weatherBoard">
+            <div id="weatherInfo" style="display: inline;">
+                <div id="weatherIcon"></div>
+                <div id="currentTemp"></div>
+                <div id="weatherDescription"></div>
+                <div id="city"></div>
             </div>
+            <div id="weatherInfoDetail" style="display: inline;">
+                <div id="tempMin"></div>
+                <div id="tempMax"></div>
+                <div id="humidity"></div>
+                <div id="wind"></div>
+                <div id="cloud"></div>
+            </div>
+        </div>
+        <section>
             <div class="menus">
                 <button id="business">비즈니스</button>
                 <button id="entertainment">연예</button>
@@ -30,6 +49,7 @@
                 <button id="technology">기술</button>
             </div>
         </section>
+
         <section id="newsBoard">
             <div class="row news">
                 <div class="col-lg-4">
@@ -54,7 +74,7 @@
         </section>
     </section>
 
-    <nav aria-label="Page navigation example" class="paginationForm">
+    <nav class="paginationForm">
         <ul class="pagination">
 
         </ul>
@@ -62,6 +82,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
+        integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF"
         crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
